kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dermadent
spec:
  selector:
    app: dermadent
  ports:
    - protocol: TCP
      port: 80
